# data_treatment

./: PointCloudExtraction.m  Positioning of laser cloud  README.md
catkin_ws/: batterydata  batterydata_median  imudata  imudata_median  mavlinkbatterystatusdata  mavlinkdata  mavpressdata  mavtempdata  mavtempdata_median  median_mavpressdata  rcchanneldata  rcchanneldata_median  tempdata  tempdata_median  topics.txt
catkin_ws/build.old/: CTestTestfile.cmake  catkin_make.cache
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel.old/: .catkin  .rosinstall  setup.sh
catkin_ws/src/data_extraction/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/data_extraction/include/MAVLink/common/: common.h  version.h
catkin_ws/src/data_extraction/src/: listener.cpp  listener.cpp~
catkin_ws/src/mavlink_conversion/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/mavlink_conversion/src/: converter.cpp
datafiles/: RCIndata  batterydata  imudata  imudata_median  mavpressdata  mavstatedata  mavtempdata  rcchanneldata  rcchanneldata_median  statusdata  tempdata  tempdata_median
datafiles/data_2016-08-21-13-06-40_glacier/: batterydata_median  mavpressdata  mavtempdata  mavtempdata_median  median_mavpressdata  tempdata
datafiles/data_2016-09-13-15-00-24_2_/: batterydata  batterydata_median  imudata  imudata_median  tempdata  (+8 more)
r_datatreatment/: constellation_script.R
roadmap/: proposalFMeinherz.tex
stereoscopy/: README.md  calibrationSession3.mat  stereoParams3.mat  stereocamera_playground.m
subscribers/: listener.cpp
(+13 files in other folders)
